src/components/form/custom-select/styles.scss
@import 'styles/settings';
@import 'styles/functions';
@import 'styles/mixins';

.c-select {
  -webkit-font-smoothing: antialiased;
  font-family: $font-family-1;
  font-size: $font-size-big;

  .react-select__control {
    min-width: 200px;
    background: transparent;
    border: 0;
    border-radius: 0;
    border-bottom: 1px solid currentColor;
    box-shadow: none;
    cursor: pointer;

    &:hover {
      border-color: inherit;
    }

    > .react-select__value-container {
      padding: 0 $space-1 * 2 $space-1 0;

      &.react-select__value-container--has-value {

        > .react-select__single-value {
          position: relative;
          top: 0;
          transform: translate(0, $space-1);
          margin: 0;
          color: currentColor;
          font-weight: 500;
        }

        & + .react-select__indicators {

          &::after {
            display: none;
          }

          > .react-select__clear-indicator {
            position: absolute;
            right: 0;
            top: calc(50% + 4px);
            padding: 0;
            transform: translate(0, -50%);
            color: currentColor;

            &:hover {
              color: currentColor;
            }

            > svg {
              width: 15px;
              height: 15px;

              &:hover {
                fill: currentColor;
              }
            }
          }
        }
      }

      > .react-select__placeholder {
        max-width: calc(100% - #{$space-1 * 2});
        margin: 0;
        color: currentColor;
        white-space: nowrap;
        overflow-x: hidden;
        text-overflow: ellipsis;
      }

      .react-select__input {
        position: absolute;
        top: calc(50% + 4px);
        left: 0;
        transform: translate(0, -50%);
        color: currentColor;

        > input {
          color: currentColor;
        }
      }
    }

    > .react-select__indicators {
      position: relative;

      &:after {
        @include triangle(5px, currentColor, 'down');
        content: '';
        position: absolute;
        top: calc(50% + (#{$space-1} / 2));
        left: calc(50% - #{$space-1});
        transform: translate(-50%, -50%)
      }

      .react-select__indicator-separator,
      .react-select__dropdown-indicator {
        display: none;
      }
    }

    &.react-select__control--is-focused {

      > .react-select__indicators {
        &:after {
          border: 0;
          @include triangle(5px, currentColor, 'up');
        }

        > .react-select__clear-indicator {
          padding: 0;
        }
      }

    }
  }

  .react-select__menu {
    top: calc(100% - 1px);
    margin: 0;
    border-radius: 0;
    background: palette(white);
    box-shadow: 0 -2px 4px 0 rgba(palette(black), .09), 0 2px 4px 0 rgba(palette(black), .09);
    z-index: 9999;

    > .react-select__menu-list {
      padding: 0;

      > .react-select__option {
        cursor: pointer;
        font-weight: 500;

        &.react-select__option--is-selected {
          background-color: currentColor;
        }
      }
    }
  }


  // themes
  &.-light {
    color: palette(white);

    .react-select__control {
      border-bottom: 1px solid palette(blue, 'light');

      > .react-select__value-container {

        .react-select__input {
          color: palette(white);
        }

        > .react-select__indicators {

          &:after {
            @include triangle(5px, palette(blue, 'light'), 'down');
          }
        }
      }
    }

    .react-select__menu {
      > .react-select__menu-list {
        > .react-select__option {
          color: palette(blue, 'dark');

          &.react-select__option--is-selected,
          &.react-select__option--is-focused {
            background-color: palette(blue, 'lighter');
          }
        }
      }
    }

    &.-disabled {
      color: rgba(palette(white), .4);

      .react-select__control {
        border-bottom: 1px solid rgba(palette(blue, 'light'), .4);

        > .react-select__value-container {

          .react-select__input {
            color: currentColor;
          }

          > .react-select__indicators {

            &:after {
              @include triangle(5px, currentColor, 'down');
            }
          }
        }
      }
    }
  }

  &.-dark {
    color: palette(gray, 'dark');

    .react-select__control {
      border-bottom: 1px solid palette(gray, 'dark');

      > .react-select__value-container {

        .react-select__input {
          color: palette(gray, 'dark');
        }

        > .react-select__indicators {

          &:after {
            @include triangle(5px, palette(gray, 'dark'), 'down');
          }
        }
      }
    }

    .react-select__menu {
      > .react-select__menu-list {
        > .react-select__option {
          color: palette(gray, 'dark');

          &.react-select__option--is-selected,
          &.react-select__option--is-focused {
            background-color: palette(gray, 'lightest');
          }
        }
      }
    }

    &.-disabled {
      color: rgba(palette(gray, 'dark'), .4);

      .react-select__control {
        border-bottom: 1px solid currentColor;

        > .react-select__value-container {

          .react-select__input {
            color: currentColor;
          }

          > .react-select__indicators {

            &:after {
              @include triangle(5px, currentColor, 'down');
            }
          }
        }
      }
    }
  }
}

